Impl. touch blocking during tablet stroke

1. In WinTab mode some drivers still send Windows Ink events which
   Windows synthesizes into touch events and triggers the pan touch
   gesture.
2. In Windows Ink mode, even when the pen is being used, it is still
   possible to activate touch gestures with the touchscreen, which
   interrupts the current stroke.

BUG: 441687


(cherry picked from commit 99cb9adf7857a0b1411b7f95309da7db92a20bec)